# flick

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE_AUDIT.md  README.md  SECURITY.md  SECURITY_AUDIT.md  docker-compose.yml  guest-shot.ts  install.sh
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml  versions.yml
core/: Cargo.toml
core/assets/: freq_de.txt  freq_en.txt
core/examples/: pace.rs
core/src/: lib.rs
deploy/cool-server/: flick-cloudflared.service  flick-update.service  flick-update.timer  setup-server.sh  update.sh
docs/: CONTRACTS.md  DESIGN-BRIEF-v0.3.md  SELF-HOSTING.md  architecture.md  mockup.html
docs/legal/: LEGAL-REVIEW.md  PRIVACY.md  TERMS.md
server/: Cargo.toml
server/assets/catalog/: aesops-fables.txt  catalog.json  civil-disobedience.txt  die-verwandlung.txt  gift-of-the-magi.txt  jekyll-and-hyde.txt  meditations.txt  owl-creek-bridge.txt  scandal-in-bohemia.txt  tell-tale-heart.txt
server/src/: auth.rs  books.rs  catalog.rs  config.rs  db.rs  error.rs  import.rs  integrations.rs  lib.rs  mail.rs  main.rs  oidc.rs  ratelimit.rs  referral.rs  social.rs  stats.rs
server/tests/: api.rs
server/tests/fixtures/: minimal.epub
web/: package.json
