[package]
name = "flick-server"
version = "0.4.2"
edition.workspace = true
license.workspace = true

[dependencies]
argon2 = "0.5"
axum = { version = "0.8", features = ["multipart"] }
dom_smoothie = "0.18"
flick-core = { path = "../core" }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder", "hostname"] }
openidconnect = "4"
pdf-extract = "0.12.0"
rand = "0.8"
rbook = "0.7"
# reqwest is already in the tree (via openidconnect); pull it in directly with
# rustls only — no native-tls/openssl. The body is capped via `Response::chunk`
# (inherent, no extra feature needed).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.27.0"
tower = { version = "0.5", features = ["util"] }
